5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4080/executions/1643_2703.log
== TEST (2019-04-08 18:17:46) 
-- CODE:
idade = int(input("idade: "))

if (idade>=18):
	mensagem = ("eleitor")
else:
	mensagem = ("não eleitor")
	
print(mensagem)
-- OUTPUT:
não eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:18:00) 
-- CODE:
idade = int(input("idade: "))

if (idade>=18):
	mensagem = ("eleitor")
else:
	mensagem = ("não_eleitor")
	
print(mensagem)
-- OUTPUT:
não_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:18:44) 
-- CODE:
idade = int(input("idade: "))

if (idade>=18):
	mensagem = ("eleitor")
else:
	mensagem = ("não_eleitor")
print(mensagem)
-- OUTPUT:
não_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:18:46) 
-- CODE:
idade = int(input("idade: "))

if (idade>=18):
	mensagem = ("eleitor")
else:
	mensagem = ("não_eleitor")
print(mensagem)
-- EXECUTION TIME:
0.288049
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2703/main.py", line 7, in <module>
    print(mensagem)
UnicodeEncodeError: 'ascii' codec can't encode character '\xe3' in position 1: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:18:48) 
-- CODE:
idade = int(input("idade: "))

if (idade>=18):
	mensagem = ("eleitor")
else:
	mensagem = ("não_eleitor")
print(mensagem)
-- OUTPUT:
não_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:19:26) 
-- CODE:
idade = int(input("idade: "))

if (idade>=18):
	mensagem = eleitor
else:
	mensagem = não_eleitor
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    mensagem = não_eleitor
NameError: name 'não_eleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:21:07) 
-- CODE:
idade = int(input("idade: "))

if (idade>=18):
	print("eleitor")
else:
	print("nao_eleitor")

-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:21:18) 
-- CODE:
idade = int(input("idade: "))

if (idade>=18):
	print("eleitor")
else:
	print("nao_eleitor")

-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:21:25) 
-- CODE:
idade = int(input("idade: "))

if (idade>=18):
	print("eleitor")
else:
	print("nao_eleitor")

-- EXECUTION TIME:
0.289626
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
